# SAI

./: .gitignore  MIGRATION_GUIDE.md  PROGRESS.md  bridge6-roadmap.md  pyproject.toml  requirements.txt  research-roadmap1.md  run_pilot.py  run_pilot_fast.py  run_pilot_v2.py  run_sanity_checks.py  run_scale_qm9.py
.ai/: CONTEXT.md
.claude/: settings.local.json
archive/legacy_2026-03-04/: README.md
archive/legacy_2026-03-04/data_processed/: pilot_curated_molecules.csv  qm9_exact_ma_5000.csv
archive/legacy_2026-03-04/data_results/: bridge6_rho_comparison.csv  exact_vs_heuristic_subset2000.csv  exact_vs_heuristic_subset500.csv  symmetry_confusion_top.csv  symmetry_disagreement_samples.csv  symmetry_gate_decision.csv  symmetry_gate_metrics.csv  symmetry_validity_gate_summary.md
data/processed/: pilot_curated_molecules.csv  pilot_real_molecules.csv  pilot_real_molecules_5000.csv  pilot_v2_molecules.csv  qm9_exact_scaled_results_smoke.csv  qm9_scaled_results_20000.csv
data/results/: sanity_report_20000.md  sanity_report_20000_api.md  sanity_report_5000.md
data/results/full_native_symmetry/: bridge6_rho_comparison.csv  symmetry_alignment_metrics.csv  symmetry_confusion_top.csv  symmetry_disagreement_samples.csv  symmetry_gate_decision.csv  symmetry_gate_metrics.csv  symmetry_validity_gate_summary.md
milestones/: M001_bridge6_empirical_validation.md  M002_bridge_convergence_sai.md  README.md
notebooks/: 00_sanity_check.ipynb  01_pilot_100_molecules.ipynb  01_pilot_real_molecules.ipynb
notebooks/data/processed/: pilot_100_molecules.csv
scripts/: symmetry_validity_gate.py
src/: analyze.py  compute_assembly.py  compute_symmetry.py  fetch_molecules.py  merge_datasets.py
