[project]
name = "sai-research"
version = "0.1.0"
description = "Symmetry Assembly Index — Assembly Theory × Finite Group Theory"
requires-python = ">=3.10"

dependencies = [
    "rdkit>=2025.9.5",
    "pandas>=3.0.1",
    "numpy>=2.4.2",
    "scipy>=1.17.0",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "scikit-learn>=1.8.0",
    "requests>=2.32.5",
    "jupyter>=1.1.1",
    "ipykernel>=7.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "black>=25.0.0",
    "ruff>=0.9.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
