[project]
name = "sai-research"
version = "0.1.0"
description = "Symmetry Assembly Index — Assembly Theory × Finite Group Theory"
requires-python = ">=3.10"

dependencies = [
    "rdkit>=2023.9",
    "pandas>=2.1",
    "numpy>=1.26",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "scikit-learn>=1.4",
    "requests>=2.31",
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "pymatgen>=2024.5",
    "ase>=3.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
